[package]
name = "quad-gif"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Display GIF animations with Macroquad."
homepage = "https://github.com/ollej/quad-gif"
repository = "https://github.com/ollej/quad-gif"
readme = "README.md"
keywords = ["graphics", "image", "gif", "animation", "macroquad"]
categories = ["command-line-utilities", "graphics", "multimedia::images", "rendering"]

[dependencies]
macroquad = "0.3.24"
gif = "0.11"
gif-dispose = "3.1"
rgb = "0.8"

[lib]
name = "quad_gif"
path = "src/lib.rs"

[[bin]]
name = "quad_gif"
path = "src/main.rs"
